@@ -43,7 +43,6 @@ import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -53,11 +52,9 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import joptsimple.OptionException;
 
-import static java.util.Collections.emptyMap;
 import static org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG;
 import static org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG;
 import static org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_PROTOCOL_CONFIG;
@@ -105,12 +102,12 @@ public class ListConsumerGroupTest {
             String topicPartitionsGroup = TOPIC_PARTITIONS_GROUP_PREFIX + i;
             createTopic(topic);
 
-            try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Collections.singleton(new TopicPartition(topic, 0)));
+            try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Set.of(new TopicPartition(topic, 0)));
                  AutoCloseable topicConsumerGroupExecutor = consumerGroupClosable(GroupProtocol.CLASSIC, topicGroup, topic);
                  AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic);
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--list"})
             ) {
-                Set<String> expectedGroups = set(Arrays.asList(topicPartitionsGroup, topicGroup, protocolGroup));
+                Set<String> expectedGroups = set(List.of(topicPartitionsGroup, topicGroup, protocolGroup));
                 final AtomicReference<Set> foundGroups = new AtomicReference<>();
 
                 TestUtils.waitForCondition(() -> {
@@ -119,7 +116,7 @@ public class ListConsumerGroupTest {
                 }, "Expected --list to show groups " + expectedGroups + ", but found " + foundGroups.get() + ".");
             }
 
-            removeConsumer(set(Arrays.asList(topicPartitionsGroup, topicGroup, protocolGroup)));
+            removeConsumer(set(List.of(topicPartitionsGroup, topicGroup, protocolGroup)));
             deleteTopic(topic);
         }
     }
@@ -139,7 +136,7 @@ public class ListConsumerGroupTest {
             String topicPartitionsGroup = TOPIC_PARTITIONS_GROUP_PREFIX + i;
             createTopic(topic);
 
-            try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Collections.singleton(new TopicPartition(topic, 0)));
+            try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Set.of(new TopicPartition(topic, 0)));
                  AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic);
                  ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state"})
             ) {
@@ -160,7 +157,7 @@ public class ListConsumerGroupTest {
 
                 assertGroupListing(
                         service,
-                        Collections.emptySet(),
+                        Set.of(),
                         EnumSet.allOf(GroupState.class),
                         expectedListing
                 );
@@ -176,20 +173,20 @@ public class ListConsumerGroupTest {
 
                 assertGroupListing(
                         service,
-                        Collections.emptySet(),
+                        Set.of(),
                         Set.of(GroupState.STABLE),
                         expectedListing
                 );
 
                 assertGroupListing(
                         service,
-                        Collections.emptySet(),
+                        Set.of(),
                         Set.of(GroupState.PREPARING_REBALANCE),
-                        Collections.emptySet()
+                        Set.of()
                 );
             }
 
-            removeConsumer(set(Arrays.asList(topicPartitionsGroup, protocolGroup)));
+            removeConsumer(set(List.of(topicPartitionsGroup, protocolGroup)));
             deleteTopic(topic);
         }
     }
@@ -202,7 +199,7 @@ public class ListConsumerGroupTest {
         String topicPartitionsGroup = TOPIC_PARTITIONS_GROUP_PREFIX + "0";
         createTopic(topic);
 
-        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Collections.singleton(new TopicPartition(topic, 0)));
+        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Set.of(new TopicPartition(topic, 0)));
              AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic);
              ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state"})
         ) {
@@ -224,8 +221,8 @@ public class ListConsumerGroupTest {
             // No filters explicitly mentioned. Expectation is that all groups are returned.
             assertGroupListing(
                     service,
-                    Collections.emptySet(),
-                    Collections.emptySet(),
+                    Set.of(),
+                    Set.of(),
                     expectedListing
             );
 
@@ -235,14 +232,14 @@ public class ListConsumerGroupTest {
             assertGroupListing(
                     service,
                     Set.of(GroupType.CONSUMER),
-                    Collections.emptySet(),
-                    Collections.emptySet()
+                    Set.of(),
+                    Set.of()
             );
 
             assertGroupListing(
                     service,
                     Set.of(GroupType.CLASSIC),
-                    Collections.emptySet(),
+                    Set.of(),
                     expectedListing
             );
         }
@@ -257,7 +254,7 @@ public class ListConsumerGroupTest {
         String topicPartitionsGroup = TOPIC_PARTITIONS_GROUP_PREFIX + "0";
         createTopic(topic);
 
-        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Collections.singleton(new TopicPartition(topic, 0)));
+        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Set.of(new TopicPartition(topic, 0)));
              AutoCloseable topicConsumerGroupExecutor = consumerGroupClosable(GroupProtocol.CLASSIC, topicGroup, topic);
              AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic);
              ConsumerGroupCommand.ConsumerGroupService service = getConsumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--list"})
@@ -288,8 +285,8 @@ public class ListConsumerGroupTest {
 
             assertGroupListing(
                     service,
-                    Collections.emptySet(),
-                    Collections.emptySet(),
+                    Set.of(),
+                    Set.of(),
                     expectedListing
             );
 
@@ -307,7 +304,7 @@ public class ListConsumerGroupTest {
             assertGroupListing(
                     service,
                     Set.of(GroupType.CONSUMER),
-                    Collections.emptySet(),
+                    Set.of(),
                     expectedListing
             );
 
@@ -329,7 +326,7 @@ public class ListConsumerGroupTest {
             assertGroupListing(
                     service,
                     Set.of(GroupType.CLASSIC),
-                    Collections.emptySet(),
+                    Set.of(),
                     expectedListing
             );
         }
@@ -343,78 +340,78 @@ public class ListConsumerGroupTest {
         String topicPartitionsGroup = TOPIC_PARTITIONS_GROUP_PREFIX + "0";
         createTopic(topic);
 
-        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Collections.singleton(new TopicPartition(topic, 0)));
+        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Set.of(new TopicPartition(topic, 0)));
              AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic)
         ) {
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list"),
-                    Collections.emptyList(),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list"),
+                    List.of(),
                     Set.of(
-                            Collections.singletonList(protocolGroup),
-                            Collections.singletonList(topicPartitionsGroup)
+                            List.of(protocolGroup),
+                            List.of(topicPartitionsGroup)
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state"),
-                    Arrays.asList("GROUP", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state"),
+                    List.of("GROUP", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Stable"),
-                            Arrays.asList(topicPartitionsGroup, "Empty")
+                            List.of(protocolGroup, "Stable"),
+                            List.of(topicPartitionsGroup, "Empty")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type"),
-                    Arrays.asList("GROUP", "TYPE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type"),
+                    List.of("GROUP", "TYPE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Classic"),
-                            Arrays.asList(topicPartitionsGroup, "Classic")
+                            List.of(protocolGroup, "Classic"),
+                            List.of(topicPartitionsGroup, "Classic")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "--state"),
-                    Arrays.asList("GROUP", "TYPE", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "--state"),
+                    List.of("GROUP", "TYPE", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Classic", "Stable"),
-                            Arrays.asList(topicPartitionsGroup, "Classic", "Empty")
+                            List.of(protocolGroup, "Classic", "Stable"),
+                            List.of(topicPartitionsGroup, "Classic", "Empty")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state", "Stable"),
-                    Arrays.asList("GROUP", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state", "Stable"),
+                    List.of("GROUP", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Stable")
+                            List.of(protocolGroup, "Stable")
                     )
             );
 
             // Check case-insensitivity in state filter.
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state", "stable"),
-                    Arrays.asList("GROUP", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state", "stable"),
+                    List.of("GROUP", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Stable")
+                            List.of(protocolGroup, "Stable")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "Classic"),
-                    Arrays.asList("GROUP", "TYPE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "Classic"),
+                    List.of("GROUP", "TYPE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Classic"),
-                            Arrays.asList(topicPartitionsGroup, "Classic")
+                            List.of(protocolGroup, "Classic"),
+                            List.of(topicPartitionsGroup, "Classic")
                     )
             );
 
             // Check case-insensitivity in type filter.
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "classic"),
-                    Arrays.asList("GROUP", "TYPE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "classic"),
+                    List.of("GROUP", "TYPE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Classic"),
-                            Arrays.asList(topicPartitionsGroup, "Classic")
+                            List.of(protocolGroup, "Classic"),
+                            List.of(topicPartitionsGroup, "Classic")
                     )
             );
         }
@@ -428,58 +425,58 @@ public class ListConsumerGroupTest {
         String topicPartitionsGroup = TOPIC_PARTITIONS_GROUP_PREFIX + "0";
         createTopic(topic);
 
-        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Collections.singleton(new TopicPartition(topic, 0)));
+        try (AutoCloseable topicPartitionsConsumerGroupExecutor = consumerGroupClosable(topicPartitionsGroup, Set.of(new TopicPartition(topic, 0)));
              AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic)
         ) {
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list"),
-                    Collections.emptyList(),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list"),
+                    List.of(),
                     Set.of(
-                            Collections.singletonList(protocolGroup),
-                            Collections.singletonList(topicPartitionsGroup)
+                            List.of(protocolGroup),
+                            List.of(topicPartitionsGroup)
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state"),
-                    Arrays.asList("GROUP", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--state"),
+                    List.of("GROUP", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Stable"),
-                            Arrays.asList(topicPartitionsGroup, "Empty")
+                            List.of(protocolGroup, "Stable"),
+                            List.of(topicPartitionsGroup, "Empty")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type"),
-                    Arrays.asList("GROUP", "TYPE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type"),
+                    List.of("GROUP", "TYPE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Consumer"),
-                            Arrays.asList(topicPartitionsGroup, "Classic")
+                            List.of(protocolGroup, "Consumer"),
+                            List.of(topicPartitionsGroup, "Classic")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "--state"),
-                    Arrays.asList("GROUP", "TYPE", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "--state"),
+                    List.of("GROUP", "TYPE", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Consumer", "Stable"),
-                            Arrays.asList(topicPartitionsGroup, "Classic", "Empty")
+                            List.of(protocolGroup, "Consumer", "Stable"),
+                            List.of(topicPartitionsGroup, "Classic", "Empty")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "consumer"),
-                    Arrays.asList("GROUP", "TYPE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "consumer"),
+                    List.of("GROUP", "TYPE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Consumer")
+                            List.of(protocolGroup, "Consumer")
                     )
             );
 
             validateListOutput(
-                    Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "consumer", "--state", "Stable"),
-                    Arrays.asList("GROUP", "TYPE", "STATE"),
+                    List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--list", "--type", "consumer", "--state", "Stable"),
+                    List.of("GROUP", "TYPE", "STATE"),
                     Set.of(
-                            Arrays.asList(protocolGroup, "Consumer", "Stable")
+                            List.of(protocolGroup, "Consumer", "Stable")
                     )
             );
         }
@@ -489,7 +486,7 @@ public class ListConsumerGroupTest {
         Map<String, Object> configs = composeConfigs(
                 groupId,
                 protocol.name,
-                emptyMap()
+                Map.of()
         );
 
         return ConsumerGroupCommandTestUtils.buildConsumers(
@@ -504,7 +501,7 @@ public class ListConsumerGroupTest {
         Map<String, Object> configs = composeConfigs(
                 groupId,
                 GroupProtocol.CLASSIC.name,
-                emptyMap()
+                Map.of()
         );
 
         return ConsumerGroupCommandTestUtils.buildConsumers(
@@ -533,26 +530,26 @@ public class ListConsumerGroupTest {
         ConsumerGroupCommandOptions opts = ConsumerGroupCommandOptions.fromArgs(args);
         ConsumerGroupCommand.ConsumerGroupService service = new ConsumerGroupCommand.ConsumerGroupService(
                 opts,
-                Collections.singletonMap(AdminClientConfig.RETRIES_CONFIG, Integer.toString(Integer.MAX_VALUE))
+                Map.of(AdminClientConfig.RETRIES_CONFIG, Integer.toString(Integer.MAX_VALUE))
         );
 
         return service;
     }
 
     private void createTopic(String topic) {
-        try (Admin admin = Admin.create(Collections.singletonMap(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
-            Assertions.assertDoesNotThrow(() -> admin.createTopics(Collections.singletonList(new NewTopic(topic, 1, (short) 1))).topicId(topic).get());
+        try (Admin admin = Admin.create(Map.of(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
+            Assertions.assertDoesNotThrow(() -> admin.createTopics(List.of(new NewTopic(topic, 1, (short) 1))).topicId(topic).get());
         }
     }
 
     private void deleteTopic(String topic) {
-        try (Admin admin = Admin.create(Collections.singletonMap(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
-            Assertions.assertDoesNotThrow(() -> admin.deleteTopics(Collections.singleton(topic)).all().get());
+        try (Admin admin = Admin.create(Map.of(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
+            Assertions.assertDoesNotThrow(() -> admin.deleteTopics(Set.of(topic)).all().get());
         }
     }
 
     private void removeConsumer(Set<String> groupIds) {
-        try (Admin admin = Admin.create(Collections.singletonMap(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
+        try (Admin admin = Admin.create(Map.of(CommonClientConfigs.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers()))) {
             Assertions.assertDoesNotThrow(() -> admin.deleteConsumerGroups(groupIds).all().get());
         }
     }
@@ -603,7 +600,7 @@ public class ListConsumerGroupTest {
             // Parse the header if one is expected.
             if (!expectedHeader.isEmpty()) {
                 if (lines.length == 0) return false;
-                List<String> header = Arrays.stream(lines[index++].split("\\s+")).collect(Collectors.toList());
+                List<String> header = Arrays.stream(lines[index++].split("\\s+")).toList();
                 if (!expectedHeader.equals(header)) {
                     return false;
                 }
@@ -612,7 +609,7 @@ public class ListConsumerGroupTest {
             // Parse the groups.
             Set<List<String>> groups = new HashSet<>();
             for (; index < lines.length; index++) {
-                groups.add(Arrays.stream(lines[index].split("\\s+")).collect(Collectors.toList()));
+                groups.add(Arrays.stream(lines[index].split("\\s+")).toList());
             }
             return expectedRows.equals(groups);
         }, () -> String.format("Expected header=%s and groups=%s, but found:%n%s", expectedHeader, expectedRows, out.get()));
@@ -627,22 +624,22 @@ class ListConsumerGroupUnitTest {
     @Test
     public void testConsumerGroupStatesFromString() {
         Set<GroupState> result = ConsumerGroupCommand.groupStatesFromString("Stable");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Collections.singleton(GroupState.STABLE)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(Set.of(GroupState.STABLE)), result);
 
         result = ConsumerGroupCommand.groupStatesFromString("Stable, PreparingRebalance");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Arrays.asList(GroupState.STABLE, GroupState.PREPARING_REBALANCE)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupState.STABLE, GroupState.PREPARING_REBALANCE)), result);
 
         result = ConsumerGroupCommand.groupStatesFromString("Dead,CompletingRebalance,");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Arrays.asList(GroupState.DEAD, GroupState.COMPLETING_REBALANCE)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupState.DEAD, GroupState.COMPLETING_REBALANCE)), result);
 
         result = ConsumerGroupCommand.groupStatesFromString("stable");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Collections.singletonList(GroupState.STABLE)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupState.STABLE)), result);
 
         result = ConsumerGroupCommand.groupStatesFromString("stable, assigning");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Arrays.asList(GroupState.STABLE, GroupState.ASSIGNING)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupState.STABLE, GroupState.ASSIGNING)), result);
 
         result = ConsumerGroupCommand.groupStatesFromString("dead,reconciling,");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Arrays.asList(GroupState.DEAD, GroupState.RECONCILING)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupState.DEAD, GroupState.RECONCILING)), result);
 
         Assertions.assertThrows(IllegalArgumentException.class, () -> ConsumerGroupCommand.groupStatesFromString("bad, wrong"));
 
@@ -654,13 +651,13 @@ class ListConsumerGroupUnitTest {
     @Test
     public void testConsumerGroupTypesFromString() {
         Set<GroupType> result = ConsumerGroupCommand.consumerGroupTypesFromString("consumer");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Collections.singleton(GroupType.CONSUMER)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(Set.of(GroupType.CONSUMER)), result);
 
         result = ConsumerGroupCommand.consumerGroupTypesFromString("consumer, classic");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Arrays.asList(GroupType.CONSUMER, GroupType.CLASSIC)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupType.CONSUMER, GroupType.CLASSIC)), result);
 
         result = ConsumerGroupCommand.consumerGroupTypesFromString("Consumer, Classic");
-        Assertions.assertEquals(ListConsumerGroupTest.set(Arrays.asList(GroupType.CONSUMER, GroupType.CLASSIC)), result);
+        Assertions.assertEquals(ListConsumerGroupTest.set(List.of(GroupType.CONSUMER, GroupType.CLASSIC)), result);
 
         Assertions.assertThrows(IllegalArgumentException.class, () -> ConsumerGroupCommand.consumerGroupTypesFromString("Share"));
 
